[tool.poetry]
name = "psych_predict"
version = "0.1.0"
description = "Predicting psychiatric hospitalization using machine learning"
authors = [
    "Joseph Deferio <j.deferio@gmail.com>"
]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.3"
requests = "^2.24.0"
numpy = "^1.19.2"
DateTime = "^4.3"
SQLAlchemy = "^1.3.20"
dask = "^2.30.0"
sklearn = "^0.0"
rfpimp = "^1.3.5"
xgboost = "^1.2.1"
imblearn = "^0.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
docformatter = "^1.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
